--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
             "email": "aaron@jonesicoding.com"
         }
     ],
+    "version": "1.0",
     "require": {
         "ext-json": "*",
         "symfony/yaml": "^4.4",
