--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,15 @@
             "email": "aaron@jonesicoding.com"
         }
     ],
-    "version": "1.2.7",
+    "version": "1.3",
     "require": {
         "ext-json": "*",
         "ext-posix": "*",
         "symfony/yaml": "^4.4",
         "symfony/console": "^4.4",
         "jonesiscoding/base-console": "^1.0",
-        "rodneyrehm/plist": "^2.0"
+        "rodneyrehm/plist": "^2.0",
+        "deviscoding/mac-console": "^1.0",
+        "symfony/process": "^4.4"
     }
 }
